[gd_scene load_steps=2 format=3 uid="uid://hud_scene_uid"]

[ext_resource type="Script" path="res://scenes/ui/hud.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_script")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
value = 100.0

[node name="Mounts" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -220.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="Left" type="Panel" parent="Control/Mounts"]
layout_mode = 0
offset_left = 0.0
offset_top = 70.0
offset_right = 60.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="Control/Mounts/Left"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Left"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Control" parent="Control/Mounts/Left"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Right" type="Panel" parent="Control/Mounts"]
layout_mode = 0
offset_left = 140.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 130.0

[node name="Label" type="Label" parent="Control/Mounts/Right"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Right"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Control" parent="Control/Mounts/Right"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="Panel" parent="Control/Mounts"]
layout_mode = 0
offset_left = 70.0
offset_top = 0.0
offset_right = 130.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="Control/Mounts/Top"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -26.0
grow_horizontal = 2
grow_vertical = 0
text = "Front"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Control" parent="Control/Mounts/Top"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TeammateList" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 200.0
grow_horizontal = 0

[node name="GemCounter" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Gems: 0 / 3"
horizontal_alignment = 1

[node name="FPSCounter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 120.0
offset_bottom = 86.0
text = "FPS: 60"
